2006-01-28 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux1.mk, local/x86-linux1-i586-mingw32msvc.mk: added
	* x86-linux2.cf.sourceforge.net-i586-mingw32msvc.mk,
	  x86-linux2.cf.sourceforge.net.mk,
	  usf-cf-x86-linux-2-i586-mingw32msvc.mk,
	  usf-cf-x86-linux-2.cf.sourceforge.net-i586-mingw32msvc.mk,
	  usf-cf-x86-linux-2.cf.sourceforge.net.mk,
	  usf-cf-x86-linux-2.mk,
	  usf-cf-x86-linux-1-i586-mingw32msvc.mk,
	  usf-cf-x86-linux-1.mk: removed

2005-11-24 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk: added SILENT=1 option

2005-11-17 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk: itroduced SILENT option to make building of pic16
	  libraries less verbose - used for nightly snapshot build

2005-08-26 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk: added STRIP=$(TARGETSTRIP) to sdcc-targetos-install
	  rule, so that the correct strip is used on sparc-solaris
	* sdcc-build-bootstrap.sh: make it work on ppc-osx
	* local/ppc-osx2.mk: added

2005-08-23 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: egrep on solaris doesn't understand -q option;
	  stdout redirection to /dev/null is used instead

2005-08-22 Borut Razem <borut.razem AT siol.net>

	* local/sparc-solaris1.mk: use /usr/ccs/bin/strip instead the default
	  GNU /usr/local/bin/strip, which has problems
	* lib/cross.mk: define TRARGETSTRIP and TRAGETRANLIB only if not
	  defined yet

2005-08-18 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux2.mk, local/x86-linux2-i586-mingw32msvc.mk: added

2005-08-16 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk, lib/fetch.mk:
	  use bash instead sh: scripts are bash specific
	* sparc-solaris1.mk: added local/sparc-solaris1.mk

2005-08-15 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk: extract the host name without domain to $(HOSTNAME)

2005-08-08 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: report the target OS
